# Image_Processing

./: .gitignore  Devcon.cpp  Histogram_Equalisation.cpp  README.md  Reading_BMP.cpp  a.out  read.cpp
BMP_Read_Write/: Devcon.cpp  Pixel_data.txt  a.out  read.cpp
Frequency_Filtering/: CMakeCache.txt  CMakeLists.txt  Frequency_Filtering  Frequency_Filtering.cpp  Makefile  README.md  cmake_install.cmake
Histogram/: CMakeCache.txt  CMakeLists.txt  Histogram  Histogram_Equalisation.cpp  Histogram_Equalisation_Matching  Histogram_Equalisation_Matching.cpp  Makefile  README.md  cmake_install.cmake
IP_Mini_Project/: Intrinsic_Decomposition.m  Layer_Separation.m  Reflectance_generate.m  Reflection_Removal.m  readme.txt
Morphological_operations/: CMakeCache.txt  CMakeLists.txt  Makefile  Morphological_operations  README.md  cmake_install.cmake  morphological_operations.cpp
Spatial_Filtering/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Spatial_Filtering  Spatial_Filtering.cpp  cmake_install.cmake
Spatial_Filtering/Normal_Images/: out
