cmake_minimum_required(VERSION 2.8)
project( Histogram_Equalisation_Matching )
SET(OpenCV_DIR ~/opencv/lib/cmake/opencv4)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Histogram_Equalisation_Matching Histogram_Equalisation_Matching.cpp )
target_link_libraries( Histogram_Equalisation_Matching ${OpenCV_LIBS} )