cmake_minimum_required(VERSION 2.8)
project( Morphological_operations )
SET(OpenCV_DIR /opt/homebrew/Cellar/opencv/4.5.4_4/lib/cmake/opencv4)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Morphological_operations Morphological_operations.cpp )
target_link_libraries( Morphological_operations ${OpenCV_LIBS} )